--- a/package.json
+++ b/package.json
@@ -15,15 +15,24 @@
     "material-table": "^1.57.2",
     "material-ui-dropzone": "^2.4.8",
     "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
     "react": "^16.12.0",
+    "react-alert": "^7.0.0",
     "react-chartjs-2": "^2.9.0",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
+    "react-dual-listbox": "^2.0.0",
+    "react-input-calendar": "^0.5.4",
     "react-loadable": "^5.5.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.3.0",
     "react-spring": "^8.0.27",
+    "react-table-v6": "^6.8.6",
+    "react-tabs": "^3.1.0",
+    "react-toastify": "^5.5.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "validate.js": "^0.13.1"
