--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.12.0",
     "react-dual-listbox": "^2.0.0",
+    "react-google-charts": "^3.0.15",
     "react-input-calendar": "^0.5.4",
     "react-loadable": "^5.5.0",
+    "react-minimal-pie-chart": "^7.3.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
