--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.0",
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "chart.js": "^2.9.3",
+    "date-fns": "^2.14.0",
     "jquery": "^3.4.1",
     "material-table": "^1.57.2",
     "material-ui-dropzone": "^2.4.8",
